# NIH-S-Index_Challenge-Phase1

./: .gitignore  LICENSE  Logical Workflow.md  Makefile  README.md  main.py  phase1_demo_slice_plan.md  pyproject.toml
data/: sample_identifiers.csv  tableExport.csv
notebooks/: findability_demo.ipynb
reports/: findability_results.csv  latest.html
