[project]
name = "nih-s-index-challenge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.18",
    "ipykernel>=6.29.5",
    "nbconvert>=7.16.6",
    "pandas>=2.2.3",
    "papermill>=2.6.0",
    "pip>=25.1.1",
    "python-dotenv>=1.1.0",
]
